--- a/playbook.yml
+++ b/playbook.yml
@@ -4,3 +4,4 @@
     - { role: day1, tags: ['day1'] }
     - { role: day2, tags: ['day2'] }
     - { role: day3, tags: ['day3'] }
+    - { role: day4, tags: ['day4'] }
