Add day 5 - this was hell

--- a/playbook.yml
+++ b/playbook.yml
@@ -5,3 +5,4 @@
     - { role: day2, tags: ['day2'] }
     - { role: day3, tags: ['day3'] }
     - { role: day4, tags: ['day4'] }
+    - { role: day5, tags: ['day5'] }
