--- a/roles/day1/tasks/main.yml
+++ b/roles/day1/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Split input into separate elves
   ansible.builtin.set_fact:
-    elfs: "{{ input | split('\n\n') }}"
+    elfs: "{{ day1_input | split('\n\n') }}"
 
 - name: Split the calories from each elf
   ansible.builtin.set_fact:
@@ -27,3 +27,5 @@
   tags: part2
   ansible.builtin.debug:
     msg: "{{ [sorted_elfs[0], sorted_elfs[1], sorted_elfs[2]] | sum }}"
+
+...
