--- a/roles/day8/tasks/main.yml
+++ b/roles/day8/tasks/main.yml
@@ -37,7 +37,7 @@
       {%- set ns.blocked = true -%}\
       {% endif %}
       {% else %}{%- set ns.blocked = true -%}\
-      {% endif %}{% endfor %}{{ ns.score | default | int }}"
+      {% endif %}{% endfor %}{{ ns.score | default(0) | int }}"
     score_left: "{%- set ns = namespace(score = 0, blocked = false) -%}\
       {% for i in look_left %}\
       {% if not ns.blocked%}\
@@ -46,7 +46,7 @@
       {%- set ns.blocked = true -%}\
       {% endif %}
       {% else %}{%- set ns.blocked = true -%}\
-      {% endif %}{% endfor %}{{ ns.score | default | int }}"
+      {% endif %}{% endfor %}{{ ns.score | default(0) | int }}"
     score_down: "{%- set ns = namespace(score = 0, blocked = false) -%}\
       {% for i in look_down %}\
       {% if not ns.blocked%}\
@@ -55,7 +55,7 @@
       {%- set ns.blocked = true -%}\
       {% endif %}
       {% else %}{%- set ns.blocked = true -%}\
-      {% endif %}{% endfor %}{{ ns.score | default | int }}"
+      {% endif %}{% endfor %}{{ ns.score | default(0) | int }}"
     score_right: "{%- set ns = namespace(score = 0, blocked = false) -%}\
       {% for i in look_right %}\
       {% if not ns.blocked%}\
@@ -64,7 +64,7 @@
       {%- set ns.blocked = true -%}\
       {% endif %}
       {% else %}{%- set ns.blocked = true -%}\
-      {% endif %}{% endfor %}{{ ns.score | default | int }}"
+      {% endif %}{% endfor %}{{ ns.score | default(0) | int }}"
     score: "{{ score_left | int * score_right | int * score_up | int * score_down | int }}"
   loop: "{{ range(0, rows | length) | list | product(range(0, rows[0] | length)) | list }}"
 
